--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -3,9 +3,10 @@ name: Python Package using Conda
 on: [push]
 
 jobs:
-  build-linux:
+  build:
     runs-on: ubuntu-latest
     strategy:
+      matrix:
       max-parallel: 5
 
     steps:
